tests/fixtures/positive/di-hygiene/IntoSetOnNonSetReturn.kt
package dihygiene

annotation class Provides
annotation class IntoSet

interface Plugin

class PluginModule {
    @Provides
    @IntoSet
    fun providePluginList(): List<Plugin> = emptyList()
}
